update(security): update security config login/logout/register/introspect