@@ -1,29 +1,27 @@
-package go_phone.security.config;
+package go_phone.security.configuration;
 
 import go_phone.security.entity.User;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.GrantedAuthority;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
     private final User user;
-    public CustomUserDetails(User u) { this.user = u; }
+
+    public CustomUserDetails(User user) { this.user = user; }
 
     @Override public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // Sẽ có role trong update...
+        return List.of(); // Role sẽ có trong update...
     }
     @Override public String getPassword() { return user.getPassword(); }
     @Override public String getUsername() { return user.getUsername(); }
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
-    @Override public boolean isEnabled() {
-        return Boolean.TRUE.equals(user.getIsActive()) && !Boolean.TRUE.equals(user.getIsDeleted());
-    }
+    @Override public boolean isEnabled() { return user.getIsActive() != null && user.getIsActive() == 1; }
 
+    public User getUser() { return user; }
 }
-
-
